# qSnapper

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  README_JP.md  qsnapper.desktop.in
Licenses/: D-Bus.md  Qt.md  Snapper.md
dbus/: com.presire.qsnapper.Operations.conf  com.presire.qsnapper.Operations.service.in  com.presire.qsnapper.Operations.xml
include/: filechangemodel.h  fssnapshot.h  fssnapshotstore.h  snapperservice.h  snapshotlistmodel.h  thememanager.h
polkit/: com.presire.qsnapper.policy
qml/: Main.qml
qml/components/: AboutQtDialog.qml  AboutqSnapperDialog.qml  RestorePreviewDialog.qml  SnapshotDetailDialog.qml  SnapshotItem.qml
qml/pages/: SnapshotListPage.qml
selinux/: ADMIN.md  ADMIN_JP.md  CMakeLists.txt  Makefile  README.md  README_JP.md  qsnapper-architecture.drawio  qsnapper.fc  qsnapper.fc.in  qsnapper.if  qsnapper.te
src/: filechangemodel.cpp  fssnapshot.cpp  fssnapshotstore.cpp  main.cpp  snapperservice.cpp  snapshotlistmodel.cpp  thememanager.cpp
src/dbusservice/: main.cpp  snapshotoperations.cpp  snapshotoperations.h
translations/: qsnapper_de.ts  qsnapper_ja.ts
